--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bisien.dems">
+    package="com.bisien.dems"
+    android:versionCode="1"
+    android:versionName="1.0.0"
+    >
 
     <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:name=".activity.application.MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo_desk"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="false"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.StatusEnvActivity"></activity>
         <activity android:name=".activity.PowerDisttibuteActivity" />
